--- a/SOAP-dontDropIt/Views/CalculateFee/Index.cshtml
+++ b/SOAP-dontDropIt/Views/CalculateFee/Index.cshtml
@@ -73,7 +73,7 @@
         </div>
     </div>
 }
-<p>Fee Amount: @ViewData["feeAmount"]</p>
+<p>Fee Amount: @TempData["feeAmount"]</p>
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
