--- a/SOAP-dontDropIt/Views/LegacyAPI/CalculateFee.cshtml
+++ b/SOAP-dontDropIt/Views/LegacyAPI/CalculateFee.cshtml
@@ -1,16 +1,16 @@
 ﻿@model SOAP_dontDropIt.Models.CalculateFeeModels.FEE
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Calculate Fee";
 }
 
-<h2>Index</h2>
+<h2>CalculateFee</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>CalculateFeeModels</h4>
         <hr />
