--- a/SOAP-dontDropIt/Views/LegacyAPI/VirtualTerminalTransaction.cshtml
+++ b/SOAP-dontDropIt/Views/LegacyAPI/VirtualTerminalTransaction.cshtml
@@ -1,18 +1,18 @@
-﻿@model SOAP_dontDropIt.Models.CalculateFeeModels.FEE
-@using SOAP_dontDropIt.Models;
+﻿@model SOAP_dontDropIt.Models.VirtualTerminalTransactionModels.VT_TRANSACTION
+
 @{
-    ViewBag.Title = "Calculate Fee";
+    ViewBag.Title = "VirtualTerminalTransaction";
 }
 
-<h2>CalculateFee</h2>
+<h2>VirtualTerminalTransaction</h2>
 
 
-@using (Html.BeginForm())
+@using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
-
+    
     <div class="form-horizontal">
-        <h4>CalculateFeeModels</h4>
+        <h4>VirtualTerminalTransactionModels</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -23,17 +23,10 @@
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.PAYMENTMETHOD, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.TRANSACTIONID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.PAYMENTMETHOD, new { htmlAttributes = new { @class = "form-control", @Value = "0" } })
-                @Html.ValidationMessageFor(model => model.PAYMENTMETHOD, "", new { @class = "text-danger" })
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(model => model.CARDTYPE, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.CARDTYPE, new { htmlAttributes = new { @class = "form-control", @Value = "4" } })
-                @Html.ValidationMessageFor(model => model.CARDTYPE, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.TRANSACTIONID, new { htmlAttributes = new { @class = "form-control", @Value = Guid.NewGuid().ToString().Replace("-","") } })
+                @Html.ValidationMessageFor(model => model.TRANSACTIONID, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
@@ -51,10 +44,17 @@
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.LINEITEM.CUSTOMERPAYMENTTYPEID, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.CSIUSERID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.LINEITEM.CUSTOMERPAYMENTTYPEID, new { htmlAttributes = new { @class = "form-control", @Value = "1" } })
-                @Html.ValidationMessageFor(model => model.LINEITEM.CUSTOMERPAYMENTTYPEID, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.CSIUSERID, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.CSIUSERID, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.LINEITEM.PAYMENTID, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.LINEITEM.PAYMENTID, new { htmlAttributes = new { @class = "form-control", @Value = Guid.NewGuid().ToString().Replace("-", "").Substring(0,9)} })
+                @Html.ValidationMessageFor(model => model.LINEITEM.PAYMENTID, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
@@ -64,19 +64,29 @@
                 @Html.ValidationMessageFor(model => model.LINEITEM.ITEMAMOUNT, "", new { @class = "text-danger" })
             </div>
         </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.LINEITEM.CUSTOMERPAYMENTTYPEID, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.LINEITEM.CUSTOMERPAYMENTTYPEID, new { htmlAttributes = new { @class = "form-control", @Value = "1" } })
+                @Html.ValidationMessageFor(model => model.LINEITEM.CUSTOMERPAYMENTTYPEID, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.URLSILENTPOST, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.URLSILENTPOST, new { htmlAttributes = new { @class = "form-control", @Value = "" } })
+                @Html.ValidationMessageFor(model => model.URLSILENTPOST, "", new { @class = "text-danger" })
+            </div>
+        </div>
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
-@{
-    //var calcFee = (TempData["CalculateFeeResponse"] as CalculateFeeResponseModels.FEE);
-}
-<p>Fee Amount: @TempData["CalculateFeeResponse"]</p>
+
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
