--- a/SOAP-dontDropIt/Views/Shared/_Layout.cshtml
+++ b/SOAP-dontDropIt/Views/Shared/_Layout.cshtml
@@ -17,13 +17,15 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
+                <a href="@Url.Action("Index", "Home")">
+                    <img src="~/Images/magicUtils.png" class="img-rounded" alt="logo" height="50">
+                    </a>
+</div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    @*<li>@Html.ActionLink("Home", "Index", "Home")</li>*@
+                    <li>@Html.ActionLink("Legacy Services", "Index", "LegacyServices")</li>
+                    <li>@Html.ActionLink("Magic Services", "Index", "MagicServices")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
@@ -33,7 +35,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - JetPay Payments Services, FL, LLC<a class="pull-right" href="http://api.collectorsolutions.com/">CSI Legacy Web Services Documentation</a></p>
         </footer>
     </div>
 
