updates to controller logic and minor update to add partial views with temp data instead of doing redirect action

--- a/SOAP-dontDropIt/Views/MagicServices/CalculateFee.cshtml
+++ b/SOAP-dontDropIt/Views/MagicServices/CalculateFee.cshtml
@@ -76,7 +76,10 @@
 @{
     //var calcFee = (TempData["CalculateFeeResponse"] as CalculateFeeResponseModels.FEE);
 }
-<p>Fee Amount: @TempData["CalculateFeeResponse"]</p>
+<div>
+    @Html.Partial("_CalculateFeeResponsePartial")
+
+</div>
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
