--- a/SOAP-dontDropIt/Content/bootstrap.css
+++ b/SOAP-dontDropIt/Content/bootstrap.css
@@ -4501,8 +4501,8 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .navbar-inverse {
-  background-color: #fff;
-  border-color: #f5f5f5;
+  background-color: #3e3e42;
+  border-color: #1c1c1e;
 }
 
 .navbar-inverse .navbar-brand {
@@ -4511,7 +4511,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 
 .navbar-inverse .navbar-brand:hover,
 .navbar-inverse .navbar-brand:focus {
-  color: #ffffff;
+  color: #ff6600;
   background-color: transparent;
 }
 
@@ -4520,7 +4520,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .navbar-inverse .navbar-nav > li > a {
-  color: #999999;
+  color: #f1f1f1;
 }
 
 .navbar-inverse .navbar-nav > li > a:hover,
