--- a/SOAP-dontDropIt/Views/LegacyServices/VirtualTerminalTransaction.cshtml
+++ b/SOAP-dontDropIt/Views/LegacyServices/VirtualTerminalTransaction.cshtml
@@ -27,6 +27,7 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.TRANSACTIONID, new { htmlAttributes = new { @class = "form-control", @Value = Guid.NewGuid().ToString().Replace("-","") } })
                 @Html.ValidationMessageFor(model => model.TRANSACTIONID, "", new { @class = "text-danger" })
+                <i class="fa fa-question-circle right" title="" data-placement="right" data-toggle="tooltip" href="#" data-original-title="For testing purposes only. Client should provide their own Transaction ID at time of deployment. Make note of the ID, it is used for transaction information retrival with Virtual Terminal Get." aria-hidden="true"></i>
             </div>
         </div>
         <div class="form-group">
