--- a/SOAP-dontDropIt/Views/Home/Index.cshtml
+++ b/SOAP-dontDropIt/Views/Home/Index.cshtml
@@ -3,29 +3,29 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Magic Web Services</h1>
+    <p class="lead">Jetpay Payments Services API's provide our clients with the capability to process both eCheck (ACH) and Credit Card transactions utilizing any store-front technology (e.g. eCommerce Web-Site, POS software, IVR, Kiosk Software) capable of interacting with .Net Web-Services.</p>
+    <p><a href="/MagicServices" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
         <h2>Getting started</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
+            Magic's MVC5 Services project gives you a insight on how to consume our various API calls and leverage patterns-based way to build dynamic websites that
             enables a clean separation of concerns and gives you full control over markup
             for enjoyable, agile development.
         </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="https://github.com/login">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>View Our Magic Processing Gateway</h2>
+        <p>View our Magic Services ProcessingGateway for available API functionality. Documentation to follow soon...</p>
+        <p><a class="btn btn-default" href="https://stage.collectorsolutions.com/magic-services/ProcessingGateway.asmx">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>View Our Legacy Documentation</h2>
+        <p>View our Legacy Services site for information on how to setup your service reference and view supported operations.</p>
+        <p><a class="btn btn-default" href="http://api.collectorsolutions.com/#">Learn more &raquo;</a></p>
     </div>
 </div>
