--- a/SOAP-dontDropIt/Views/LegacyServices/VirtualTerminalTransaction.cshtml
+++ b/SOAP-dontDropIt/Views/LegacyServices/VirtualTerminalTransaction.cshtml
@@ -1,10 +1,10 @@
 ﻿@model SOAP_dontDropIt.Models.VirtualTerminalTransactionModels.VT_TRANSACTION
-
+@using SOAP_dontDropIt.Models;
 @{
-    ViewBag.Title = "VirtualTerminalTransaction";
+    ViewBag.Title = "Virtual Terminal Transaction";
 }
 
-<h2>VirtualTerminalTransaction</h2>
+<h2>Virtual Terminal Transaction</h2>
 
 
 @using (Html.BeginForm()) 
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>VirtualTerminalTransactionModels</h4>
+        <h4>Virtual Terminal Transaction POST</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -81,12 +81,19 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             <div class="col-md-offset-3 col-md-6">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Submit" class="btn btn-primary" />
             </div>
         </div>
     </div>
 }
-
+@{
+    var calcFeeResponse = (TempData["VTPostResponse"] as VirtualTerminalTransactionResponseModels.VT_TRANSACTION);
+}
+<p>
+    @{
+    Html.RenderPartial("_CalculateFeeResponsePartial", calcFeeResponse);
+}
+</p>
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
