--- a/SOAP-dontDropIt/Content/Site.css
+++ b/SOAP-dontDropIt/Content/Site.css
@@ -17,8 +17,21 @@
 }
 
 /* Set width on the form input elements since they're 100% wide by default */
-input,
+/*input,
 select,
 textarea {
     max-width: 280px;
+}*/
+.fa{
+  cursor:pointer;
+}
+.loader {
+    display: none;
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background: url('../Images/ring-alt.gif') 50% 50% no-repeat rgba(249,249,249,0.7);
 }
