--- a/SOAP-dontDropIt/Views/MagicServices/Index.cshtml
+++ b/SOAP-dontDropIt/Views/MagicServices/Index.cshtml
@@ -12,9 +12,9 @@
     <a href="magicservices/ProcessTransaction" class="list-group-item"><span class="badge">POST</span>Process Transaction <i class="fa fa-pied-piper-alt fa-2x" aria-hidden="true"></i></a>
     <a href="magicservices/VirtualTerminalTransactionPost" class="list-group-item"><span class="badge">POST</span>Virtual Terminal Transaction <i class="fa fa-pied-piper-alt fa-2x" aria-hidden="true"></i></a>
     <a href="magicservices/VirtualTerminalTransactionGet" class="list-group-item"><span class="badge">GET</span>Virtual Terminal Transaction <i class="fa fa-pied-piper-alt fa-2x" aria-hidden="true"></i></a>
-    <a href="magicservices/Tokenization" class="list-group-item"><span class="badge">POST</span>Tokenization <i class="fa fa-pied-piper-alt fa-2x" aria-hidden="true"></i></a>
-    <a href="magicservices/ProcessCredit" class="list-group-item"><span class="badge">POST</span>Export Methods <i class="fa fa-pied-piper-alt fa-2x" aria-hidden="true"></i></a>
-    <a href="#" class="list-group-item disabled"><span class="badge">POST</span>Process Credit <i class="fa fa-pied-piper-alt fa-2x" aria-hidden="true"></i></a>
+    <a href="#" class="list-group-item disabled"><span class="badge">POST</span>Tokenization <i class="fa fa-pied-piper-alt fa-2x" aria-hidden="true"></i></a>
+    <a href="magicservices/ExportDetailedTransactions" class="list-group-item"><span class="badge">POST</span>Export Methods <i class="fa fa-pied-piper-alt fa-2x" aria-hidden="true"></i></a>
+    <a href="magicservices/ProcessCredit" class="list-group-item"><span class="badge">POST</span>Process Credit <i class="fa fa-pied-piper-alt fa-2x" aria-hidden="true"></i></a>
     <a href="magicservices/VerifyTransaction" class="list-group-item"><span class="badge">POST</span>Verify Transaction <i class="fa fa-pied-piper-alt fa-2x" aria-hidden="true"></i></a>
     <a href="magicservices/InsertPaymentIdLookup" class="list-group-item"><span class="badge">POST</span>Payment ID Lookup <i class="fa fa-pied-piper-alt fa-2x" aria-hidden="true"></i></a>
 </div>
