--- a/SOAP-dontDropIt/Views/MagicServices/VirtualTerminalTransactionPost.cshtml
+++ b/SOAP-dontDropIt/Views/MagicServices/VirtualTerminalTransactionPost.cshtml
@@ -45,7 +45,7 @@
         <div class="form-group">
             <label class="col-md-2">Generate Random Data</label>
             <div class="col-md-4">
-                <input type="button" class="btn btn-default btnGenerate" id="rndGenerate" value="Random Transaction" />
+                <input type="button" class="btn btn-primary btnGenerate" id="rndGenerate" value="Random Transaction" />
             </div>
         </div>
         <div class="well" style="background-color:#ffffff">
