--- a/SOAP-dontDropIt/Views/MagicServices/Index.cshtml
+++ b/SOAP-dontDropIt/Views/MagicServices/Index.cshtml
@@ -5,8 +5,8 @@
 <h2>Magic Web Services</h2>
 
 <div class="list-group">
-    <a href="#" class="list-group-item active">
-        List of Magic Services Methods
+    <a href="#" class="list-group-item active list-group-bg">
+        List of magic services methods
     </a>
     <a href="magicservices/CalculateFee" class="list-group-item"><span class="badge">POST</span>Calculate Fee <i class="fa fa-pied-piper-alt fa-2x" aria-hidden="true"></i></a>
     <a href="magicservices/ProcessTransaction" class="list-group-item"><span class="badge">POST</span>Process Transaction <i class="fa fa-pied-piper-alt fa-2x" aria-hidden="true"></i></a>
