--- a/SOAP-dontDropIt/Content/Site.css
+++ b/SOAP-dontDropIt/Content/Site.css
@@ -15,7 +15,9 @@
 .dl-horizontal dt {
     white-space: normal;
 }
-
+.list-group-bg{
+    background-color:#486075 !important; border-color:#51697d !important; color:#fff !important;
+}
 /* Set width on the form input elements since they're 100% wide by default */
 /*input,
 select,
