--- a/SOAP-dontDropIt/Views/LegacyServices/CalculateFee.cshtml
+++ b/SOAP-dontDropIt/Views/LegacyServices/CalculateFee.cshtml
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Calculate Fee</h4>
+        <h4>Legacy Calculate Fee</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -68,7 +68,7 @@
         <div class="form-group">
 
             <div class="col-md-offset-3 col-md-6">
-                <input type="submit" value="Submit" class="btn btn-primary" />
+                <input type="submit" value="Submit" class="btn btn-primary btn-lg" />
             </div>
         </div>
     </div>
