help file updates, unused calls commented out

--- a/SOAP-dontDropIt/Views/LegacyServices/Index.cshtml
+++ b/SOAP-dontDropIt/Views/LegacyServices/Index.cshtml
@@ -14,9 +14,9 @@
     <a href="legacyservices/VirtualTerminalTransactionPost" class="list-group-item"><span class="badge">POST</span>Virtual Terminal Transaction <i class="fa fa-pied-piper-alt fa-2x" aria-hidden="true"></i></a>
     <a href="#" class="list-group-item disabled"><span class="badge">GET</span>Virtual Terminal Transaction <i class="fa fa-pied-piper-alt fa-2x" aria-hidden="true"></i></a>
     <a href="#" class="list-group-item disabled"><span class="badge">POST</span>Tokenization <i class="fa fa-pied-piper-alt fa-2x" aria-hidden="true"></i></a>
-    <a href="legacyservices/ExportDetailedTransactions" class="list-group-item"><span class="badge">POST</span>Export Methods <i class="fa fa-pied-piper-alt fa-2x" aria-hidden="true"></i></a>
-    <a href="legacyservices/ProcessCredit" class="list-group-item"><span class="badge">POST</span>Process Credit <i class="fa fa-pied-piper-alt fa-2x" aria-hidden="true"></i></a>
-    <a href="legacyservices/VerifyTransaction" class="list-group-item"><span class="badge">POST</span>Verify Transaction <i class="fa fa-pied-piper-alt fa-2x" aria-hidden="true"></i></a>
-    <a href="legacyservices/InsertPaymentIdLookup" class="list-group-item"><span class="badge">POST</span>Payment ID Lookup <i class="fa fa-pied-piper-alt fa-2x" aria-hidden="true"></i></a>
+    <a href="#" class="list-group-item disabled"><span class="badge">POST</span>Export Methods <i class="fa fa-pied-piper-alt fa-2x" aria-hidden="true"></i></a>
+    <a href="#" class="list-group-item disabled"><span class="badge">POST</span>Process Credit <i class="fa fa-pied-piper-alt fa-2x" aria-hidden="true"></i></a>
+    <a href="#" class="list-group-item disabled"><span class="badge">POST</span>Verify Transaction <i class="fa fa-pied-piper-alt fa-2x" aria-hidden="true"></i></a>
+    <a href="#" class="list-group-item disabled"><span class="badge">POST</span>Payment ID Lookup <i class="fa fa-pied-piper-alt fa-2x" aria-hidden="true"></i></a>
 </div>
 
