--- a/SOAP-dontDropIt/Views/MagicServices/CalculateFee.cshtml
+++ b/SOAP-dontDropIt/Views/MagicServices/CalculateFee.cshtml
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Calculate Fee POST Using .NET XDocument XML</h4>
+        <h4>Magic Calculate Fee POST Using .NET XDocument XML</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
