--- a/SOAP-dontDropIt/Content/Site.css
+++ b/SOAP-dontDropIt/Content/Site.css
@@ -24,6 +24,18 @@ select,
 textarea {
     max-width: 280px;
 }*/
+.panel-title a:hover, a:focus {
+    text-decoration: none;
+}
+.panel-title a:active {
+    text-decoration: none;
+}
+.panel-title a:visited{
+    text-decoration: none;
+}
+.ing{
+    font-size:14px;
+}
 .fa{
   cursor:pointer;
 }
