--- a/SOAP-dontDropIt/Views/LegacyServices/VirtualTerminalTransactionPost.cshtml
+++ b/SOAP-dontDropIt/Views/LegacyServices/VirtualTerminalTransactionPost.cshtml
@@ -6,7 +6,7 @@
 }
 <div class="loader"></div>
 <div class="container">
-    <h2>Virtual Terminal Transaction (POST)</h2>
+    <h2>Legacy Virtual Terminal Transaction (POST)</h2>
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
