update to add landing page, tweaks to url routing

--- a/SOAP-dontDropIt/Content/Site.css
+++ b/SOAP-dontDropIt/Content/Site.css
@@ -1,6 +1,8 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    background: url('../Images/cubes.png') repeat;
+    background-attachment: fixed;
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -8,7 +10,9 @@
     padding-left: 15px;
     padding-right: 15px;
 }
-
+.jumbotron{
+    background-color:#ffffff;
+}
 /* Override the default bootstrap behavior where horizontal description lists 
    will truncate terms that are too long to fit in the left column 
 */
@@ -38,6 +42,11 @@ textarea {
 }
 .fa{
   cursor:pointer;
+}
+@media (min-width: 1199px) {
+    footer {
+        margin-bottom: 3%;
+    }
 }
 .loader {
     display: none;
