--- a/SOAP-dontDropIt/Content/bootstrap.css
+++ b/SOAP-dontDropIt/Content/bootstrap.css
@@ -35,7 +35,6 @@ section,
 summary {
   display: block;
 }
-
 audio,
 canvas,
 video {
@@ -4408,7 +4407,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
-  color: #333333;
+  color: #ff6600;
   background-color: transparent;
 }
 
