--- a/SOAP-dontDropIt/Views/Home/Help.cshtml
+++ b/SOAP-dontDropIt/Views/Home/Help.cshtml
@@ -81,7 +81,7 @@ https://stage.collectorsolutions.com/magic-ui/VirtualTerminal/8E3F20CE5619431D9B
             <div id="question3" class="panel-collapse collapse" style="height: 0px;">
                 <div class="panel-body">
                     <h5><span class="label label-primary">Answer</span></h5>
-                    <p><a href="mailto:software@collectorsolutions.com">software@collectorsolutions.com</a> Please note: we prefer the developers to use this email. Technical questions will be asked.</p>
+                    <p><a href="mailto:software@collectorsolutions.com">software@collectorsolutions.com</a> Please note: we prefer that developers use this email; technical questions will be asked.</p>
                  </div>
             </div>
         </div>
