--- a/SOAP-dontDropIt/Views/LegacyServices/Index.cshtml
+++ b/SOAP-dontDropIt/Views/LegacyServices/Index.cshtml
@@ -9,9 +9,9 @@
     <a href="#" class="list-group-item active list-group-bg">
         List of legacy services methods
     </a>
-    <a href="legacyservices/CalculateFee" class="list-group-item"><span class="badge">POST</span>Calculate Fee <i class="fa fa-pied-piper-alt fa-2x" aria-hidden="true"></i></a>
+    <a href="@Url.Action("CalculateFee", "LegacyServices")" class="list-group-item"><span class="badge">POST</span>Calculate Fee <i class="fa fa-pied-piper-alt fa-2x" aria-hidden="true"></i></a>
     <a href="#" class="list-group-item disabled"><span class="badge">POST</span>Process Transaction <i class="fa fa-pied-piper-alt fa-2x" aria-hidden="true"></i></a>
-    <a href="legacyservices/VirtualTerminalTransactionPost" class="list-group-item"><span class="badge">POST</span>Virtual Terminal Transaction <i class="fa fa-pied-piper-alt fa-2x" aria-hidden="true"></i></a>
+    <a href="@Url.Action("VirtualTerminalTransactionPost", "LegacyServices")" class="list-group-item"><span class="badge">POST</span>Virtual Terminal Transaction <i class="fa fa-pied-piper-alt fa-2x" aria-hidden="true"></i></a>
     <a href="#" class="list-group-item disabled"><span class="badge">GET</span>Virtual Terminal Transaction <i class="fa fa-pied-piper-alt fa-2x" aria-hidden="true"></i></a>
     <a href="#" class="list-group-item disabled"><span class="badge">POST</span>Tokenization <i class="fa fa-pied-piper-alt fa-2x" aria-hidden="true"></i></a>
     <a href="#" class="list-group-item disabled"><span class="badge">POST</span>Export Methods <i class="fa fa-pied-piper-alt fa-2x" aria-hidden="true"></i></a>
