--- a/SOAP-dontDropIt/Views/Home/Index.cshtml
+++ b/SOAP-dontDropIt/Views/Home/Index.cshtml
@@ -3,9 +3,9 @@
 }
 
 <div class="jumbotron">
-    <h1>Magic Web Services</h1>
-    <p class="lead">Jetpay Payments Services API's provide our clients with the capability to process both eCheck (ACH) and Credit Card transactions utilizing any store-front technology (e.g. eCommerce Web-Site, POS software, IVR, Kiosk Software) capable of interacting with .Net Web-Services.</p>
-    <p><a href="/MagicServices" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>.NET Magic Web Services</h1>
+    <p class="lead">Jetpay Payment Services API provides our clients with the capability to process both eCheck (ACH) and Credit Card transactions utilizing any store-front technology (e.g. eCommerce Web-Site, POS software, IVR, Kiosk Software) capable of interacting with .Net Web-Services.</p>
+    <p><a href="@Url.Action("Index", "MagicServices")" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
 <div class="row">
